--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,12 @@
 # production
 /build
 /yarn.lock
+/package-lock.json
+
+# misc
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# docker
+/.DS_Store
