--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@carbon/charts": "^0.56.0",
+    "@carbon/charts-react": "^0.56.0",
     "@carbon/elements": "^10.54.0",
+    "@carbon/icons-react": "^10.49.0",
     "@carbon/react": "^0.16.0",
     "@carbon/styles": "^0.16.0",
     "@testing-library/jest-dom": "^5.16.2",
@@ -12,7 +15,10 @@
     "carbon-components": "^10.56.0",
     "carbon-components-react": "^7.56.0",
     "carbon-icons": "^7.0.7",
+    "chart.js": "^3.7.1",
+    "d3": "^7.4.0",
     "react": "^17.0.2",
+    "react-chartjs-2": "^4.0.1",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
     "sass": "^1.49.9",
